# internal/httpserver/swaggerdocs/swagger.json
@@ -49,7 +49,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_rogerwesterbo_familytree_pkg_interfaces.PersonsListResponse"
+                            "$ref": "#/definitions/interfaces.PersonsListResponse"
                         }
                     },
                     "500": {
@@ -90,7 +90,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_rogerwesterbo_familytree_pkg_interfaces.PersonCreateRequest"
+                            "$ref": "#/definitions/interfaces.PersonCreateRequest"
                         }
                     }
                 ],
@@ -98,7 +98,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/github_com_rogerwesterbo_familytree_pkg_interfaces.PersonResponse"
+                            "$ref": "#/definitions/interfaces.PersonResponse"
                         }
                     },
                     "400": {
@@ -156,7 +156,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_rogerwesterbo_familytree_pkg_interfaces.PersonResponse"
+                            "$ref": "#/definitions/interfaces.PersonResponse"
                         }
                     },
                     "404": {
@@ -213,7 +213,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_rogerwesterbo_familytree_pkg_interfaces.PersonUpdateRequest"
+                            "$ref": "#/definitions/interfaces.PersonUpdateRequest"
                         }
                     }
                 ],
@@ -221,7 +221,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_rogerwesterbo_familytree_pkg_interfaces.PersonResponse"
+                            "$ref": "#/definitions/interfaces.PersonResponse"
                         }
                     },
                     "400": {
@@ -338,7 +338,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_rogerwesterbo_familytree_pkg_interfaces.RelationshipsListResponse"
+                            "$ref": "#/definitions/interfaces.RelationshipsListResponse"
                         }
                     },
                     "500": {
@@ -379,7 +379,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_rogerwesterbo_familytree_pkg_interfaces.RelationshipCreateRequest"
+                            "$ref": "#/definitions/interfaces.RelationshipCreateRequest"
                         }
                     }
                 ],
@@ -387,7 +387,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/github_com_rogerwesterbo_familytree_pkg_interfaces.RelationshipResponse"
+                            "$ref": "#/definitions/interfaces.RelationshipResponse"
                         }
                     },
                     "400": {
@@ -445,7 +445,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_rogerwesterbo_familytree_pkg_interfaces.RelationshipResponse"
+                            "$ref": "#/definitions/interfaces.RelationshipResponse"
                         }
                     },
                     "404": {
@@ -502,7 +502,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_rogerwesterbo_familytree_pkg_interfaces.RelationshipUpdateRequest"
+                            "$ref": "#/definitions/interfaces.RelationshipUpdateRequest"
                         }
                     }
                 ],
@@ -510,7 +510,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_rogerwesterbo_familytree_pkg_interfaces.RelationshipResponse"
+                            "$ref": "#/definitions/interfaces.RelationshipResponse"
                         }
                     },
                     "400": {
@@ -604,7 +604,7 @@
         }
     },
     "definitions": {
-        "github_com_rogerwesterbo_familytree_pkg_interfaces.Person": {
+        "interfaces.Person": {
             "type": "object",
             "required": [
                 "firstName",
@@ -649,7 +649,7 @@
                 }
             }
         },
-        "github_com_rogerwesterbo_familytree_pkg_interfaces.PersonCreateRequest": {
+        "interfaces.PersonCreateRequest": {
             "type": "object",
             "required": [
                 "firstName",
@@ -686,18 +686,18 @@
                 }
             }
         },
-        "github_com_rogerwesterbo_familytree_pkg_interfaces.PersonResponse": {
+        "interfaces.PersonResponse": {
             "type": "object",
             "properties": {
                 "message": {
                     "type": "string"
                 },
                 "person": {
-                    "$ref": "#/definitions/github_com_rogerwesterbo_familytree_pkg_interfaces.Person"
+                    "$ref": "#/definitions/interfaces.Person"
                 }
             }
         },
-        "github_com_rogerwesterbo_familytree_pkg_interfaces.PersonUpdateRequest": {
+        "interfaces.PersonUpdateRequest": {
             "type": "object",
             "properties": {
                 "birthDate": {
@@ -730,7 +730,7 @@
                 }
             }
         },
-        "github_com_rogerwesterbo_familytree_pkg_interfaces.PersonsListResponse": {
+        "interfaces.PersonsListResponse": {
             "type": "object",
             "properties": {
                 "count": {
@@ -739,12 +739,12 @@
                 "persons": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/github_com_rogerwesterbo_familytree_pkg_interfaces.Person"
+                        "$ref": "#/definitions/interfaces.Person"
                     }
                 }
             }
         },
-        "github_com_rogerwesterbo_familytree_pkg_interfaces.Relationship": {
+        "interfaces.Relationship": {
             "type": "object",
             "required": [
                 "_from",
@@ -787,7 +787,7 @@
                 }
             }
         },
-        "github_com_rogerwesterbo_familytree_pkg_interfaces.RelationshipCreateRequest": {
+        "interfaces.RelationshipCreateRequest": {
             "type": "object",
             "required": [
                 "from",
@@ -821,18 +821,18 @@
                 }
             }
         },
-        "github_com_rogerwesterbo_familytree_pkg_interfaces.RelationshipResponse": {
+        "interfaces.RelationshipResponse": {
             "type": "object",
             "properties": {
                 "message": {
                     "type": "string"
                 },
                 "relationship": {
-                    "$ref": "#/definitions/github_com_rogerwesterbo_familytree_pkg_interfaces.Relationship"
+                    "$ref": "#/definitions/interfaces.Relationship"
                 }
             }
         },
-        "github_com_rogerwesterbo_familytree_pkg_interfaces.RelationshipUpdateRequest": {
+        "interfaces.RelationshipUpdateRequest": {
             "type": "object",
             "properties": {
                 "endDate": {
@@ -861,7 +861,7 @@
                 }
             }
         },
-        "github_com_rogerwesterbo_familytree_pkg_interfaces.RelationshipsListResponse": {
+        "interfaces.RelationshipsListResponse": {
             "type": "object",
             "properties": {
                 "count": {
@@ -870,7 +870,7 @@
                 "relationships": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/github_com_rogerwesterbo_familytree_pkg_interfaces.Relationship"
+                        "$ref": "#/definitions/interfaces.Relationship"
                     }
                 }
             }
